fix nav spacing issue on mobile

--- a/components/header/styles.module.scss
+++ b/components/header/styles.module.scss
@@ -17,3 +17,10 @@
     border: 1px solid white;
   }
 }
+
+@media screen and (max-width: 630px) {
+  .contact {
+    width: 9rem;
+    font-size: 1.3rem;
+  }
+}
