--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -70,4 +70,8 @@
       line-height: 3rem;
     }
   }
+  .hitme {
+    width: 13rem;
+    font-size: 1.3rem;
+  }
 }
